# itmo

./: .gitignore  .gitmodules  README.md  sus.basm
.obsidian/: workspace.json
ai/: .gitignore
ai/l1/: Untitled.rdf  db.pl  query.md
ai/l2/: main.py
ai/l3/: main.py
ai/l4/: main.ipynb
ai/l5/: main.ipynb
ai/l6/: main.ipynb
alg/: Makefile  a.cpp  b.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  input.txt  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  p.cpp  package-lock.json  package.json  q.cpp  sus.bat
compilers/l1/: main.py
compilers/labs/: l2.py  l3.py
compmath/l1/: Cargo.toml  input1.txt  input2.txt  input3.txt  input4.txt  readme.md
compmath/l2/: calc.ipynb  input1.json  input3.json  input4.json  input5.json  lin2.json  lin3.json  m1.json  m2.json  m3.json  matrix.ipynb  readme.md
compmath/l3/: e1.txt  e2.txt  e3.txt  extra.py  f1.txt  f2.txt  f3.txt  f4.txt  f5.txt  main.py  readme.md  test.py  utils.py
compmath/l4/: approx.py  calc.ipynb  e1.json  e2.json  e3.json  e4.json  e5.json  main.py  readme.md  utils.py
compmath/l5/: data1.txt  data11.txt  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  example_data.txt  input.py  inter.py  main.py  mm.ipynb
db/l1/: l1.tex  (+1 more)
deutch/: lection3.md  main.c
distributed-computing/: Dockerfile  docker-compose.yml
mathstat/: l1.ipynb  l2.ipynb  l3.ipynb  l4.ipynb
modeling/: smo GGKE.160.1.gpr  smo GGKE.gps  ВАЖНО.docx
networks/: task1.net  task2.net  task3.net
opd/bcomp-microcode-parser/: Cargo.toml
opd/bcomp-microcode-parser/src/: control_signals.rs  table.rs
optimisations/: l1.ipynb
(+1106 files in other folders)
