[package]
name = "bcomp-microcode-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-idents = "1.1.4"
const_format = "0.2.30"
duplicate = "1.0.0"
enum-primitive-derive = "0.2.2"
fancy-regex = "0.11.0"
fixedbitset = "0.4.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
num-traits = "0.2.15"
paste = "1.0.12"
regex = "1.8.1"
